# aur2

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.aura/: AURA.md  aura.md
.aura/epics/: manual-edits-and-epic-redesign.md  voice-memo-workflow.md
.aura/epics/scope-and-execute-skills/: epic.md
.aura/future_visions/: git-workflow-in-skills.md  hands-off-development.md  live-bead-treadmill.md  programmatic-agent-invocation.md
.aura/scripts/: record_memo.py  transcribe.py
.beads/: AGENTS.md  issues.jsonl
.claude/: settings.json
.claude/commands/: aura.implement.md  aura.record.md  aura.tickets.md  beads.status.md
.claude/skills/aur2.execute/: SKILL.md
.claude/skills/aur2.process_visions/: SKILL.md
.claude/skills/aur2.scope/: SKILL.md
.claude/skills/aura.create_beads/: SKILL.md
.claude/skills/aura.epic/: SKILL.md
.claude/skills/aura.implement/: SKILL.md
.claude/skills/aura.process_memo/: SKILL.md
.claude/skills/hive.advise/: SKILL.md
.claude/skills/hive.deliver/: SKILL.md
.claude/skills/hive.groom/: SKILL.md
.claude/skills/hive.ingest/: SKILL.md
.claude/skills/hive.iterate/: SKILL.md
.claude/skills/hive.maintain/: SKILL.md
.claude/skills/hive.onboard/: SKILL.md
.claude/templates/: knowledge-project.md  research.md
src/aur2/: __init__.py  cli.py  config.py  init.py
src/aura/: __init__.py  cli.py  config.py  init.py
tests/tron/: README.md  pyproject.toml
tests/tron/.aura/: .gitignore
tests/tron/examples/: expected_epic.md  expected_tickets.md  sample_transcript.txt
(+14 files in other folders)
