[project]
name = "aura"
version = "0.1.0"
description = "Agentic workflow layer for codebases"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
aura = "aura.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aura"]
